# rorobotics

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
src/: cache.rs  database.rs  lib.rs  main.rs  redis_client.rs  search_client.rs
src/cache/: auth.rs  events.rs  mod.rs  search.rs  seats.rs
src/config/: mod.rs
src/controllers/: analytics.rs  bookings.rs  events.rs  mod.rs  payment.rs  test.rs
src/middleware/: mod.rs
src/migrations/: 001_initial_schema.sql
src/models/: event.rs  mod.rs  seat.rs  user.rs
src/services/: cleanup.rs  mod.rs  payment.rs
