[package]
name = "ticket_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }

redis = { version = "0.32", features = ["tokio-comp"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

dotenvy = "0.15"

rdkafka = { version = "0.38", features = ["cmake-build"] }

# Authentication
base64 = "0.22"
bcrypt = "0.17"

# HTTP & Validation
validator = { version = "0.20", features = ["derive"] }

# Circuit Breaker
failsafe = "1.3"

# Additional async utilities
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

reqwest = { version = "0.12", features = ["json"] }

sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true